--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -85,7 +85,12 @@
 			<version>0.11.2</version>
 			<scope>runtime</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
