--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.glow.openbook">
+   <uses-permission android:name="android.permission.CAMERA" />
    <application
         android:label="openbook"
         android:icon="@mipmap/ic_launcher">
