build: configure Elastic Beanstalk and flyway with postgresql

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 application-api-keys.properties
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
