deploy: add dev properties

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,2 +1,2 @@
-aladin-ttb-key=
-spring-jwt-secret=kFw_ghm_8xA76Y9c0fBuZMvcMs4Hw4SBS6tJyASQd4PcPeXRyHDKrf-198eXzLlYEeYxw0Es5WaVVMF8_ofQkA
+aladin-ttb-key=${ALADIN_TTB_KEY}
+spring-jwt-secret=${JWT-SECRET}
