build: add dependency to flyway-core and configure database connection

--- a/backend/src/main/resources/application-dev.yaml
+++ b/backend/src/main/resources/application-dev.yaml
@@ -1,6 +1,11 @@
 spring:
+  datasource:
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
   flyway:
     enabled: true
     baseline-on-migrate: true
+    baseline-version: 1
 aladin-ttb-key: ${ALADIN_TTB_KEY}
 spring-jwt-secret: ${JWT-SECRET}
