build: tag frontend and backend with version 0.2.0+MVP2

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.glow</groupId>
 	<artifactId>openbook</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.2.0+MVP2</version>
 	<name>OpenBook</name>
 	<description>OpenBook backend</description>
 	<properties>
