--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.1.1
+  flutter_native_image: ^0.0.6
   get: ^4.3.8
   get_storage: ^2.0.3
   http: ^0.13.4
