--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -27,7 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  barcode_scan2: any
+  barcode_scan2:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
@@ -42,6 +42,7 @@ dependencies:
   camera:
   path_provider:
   path:
+  image_picker:
 
 dev_dependencies:
   
